# mascope

./: .dockerignore  .env  .env.development  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  base.mascope.toml  dev.mascope.toml  docker-build.sh  docker-compose.demo.yaml  docker-compose.dev.yaml  docker-compose.release.yaml  docker-compose.yaml  docker-compose.yml  flake.nix  mascope  mkdocs.yml  prod.mascope.toml  pyproject.toml  renovate.json  tmp.py
agents/export/: .gitignore  README.md  build.ps1  pyproject.toml
agents/file/: build.ps1  pyproject.toml
agents/file/file_mover/: file_mover.py
agents/file/scripts/: build.cmd
agents/file_mover/: README.md  build.ps1  file_mover.py  file_mover.spec  pyproject.toml  setup.py
agents/file_mover/scripts/: build.cmd
agents/file_uploader/: build.ps1  file_uploader.py  pyproject.toml
agents/ht3000a/: README.md  pyproject.toml
agents/ht3000a/ht3000a/: run.py
agents/kecu/: pyproject.toml
agents/kecu/kecu/: .gitignore  agent.py
agents/kecu/scripts/: build.cmd
agents/tof/: build.ps1  pyproject.toml
agents/tof_agent/: .gitignore  README.md  build.ps1  pyproject.toml  tof_agent.py  tof_agent_config.yaml
agents/tof_agent/scripts/: build.cmd  install.cmd  run.cmd
agents/tof_service/: pyproject.toml  tof_service.py
agents/tof_service/scripts/: build.cmd
agents/tofwerk/: .gitignore  pyproject.toml
backend/: .bashfuncs  .gitignore  Dockerfile  README.md  dev_setup.cmd  dev_setup.sh  entrypoint.sh  pyproject.toml  run_services.cmd  run_services.sh
backend/backend/: __init__.py  db_api_rest.py  main.py  router.py  server.py  socket_events.py
backend/backend/api/: __init__.py  calibration.py  exceptions.py  instrument.py  match.py  sample.py  scenthound.py  schema.py  signal.py  target.py  template.py  test.py  visualization.py  workspace.py
backend/backend/api_rest/: exceptions.py
backend/backend/api_sio/: __init__.py
backend/backend/api_wrapper/: README.md  mascope_api.py  pyproject.toml
backend/backend/db/: __init__.py  con.py  conn.py  id.py  instance.py  table.py
backend/backend/lib/: chemistry.py  client.py  datapool.py  file.py  hack.py  image.py  logging.py  match.py  peak.py  pyproject.toml  server.py  signal.py  struct.py  util.py
backend/backend/service/: .gitignore  file_converter.py  file_downloader.py  file_io.py  file_streaming.py  log_rotate.py  pyproject.toml  tof_service.py
backend/backend/services/: file_converter.py  file_io.py  file_streaming.py  kecu.py  requirements.txt  sample.py  signal.py  target.py  visualization.py
backend/docker/: .tmux.conf  .tmuxp.yml  Dockerfile
backend/docs/: README.md  update_docs.bat
backend/docs/source/: backend.api_rest.routes.rst  index.rst
backend/hardware/: README.md  pyproject.toml
backend/hardware/kecu/: kecu.py
backend/hardware/orbitrap/: __init__.py  event.py  generator.py  instrument.py  spectra.py  util.py
backend/hardware/tofwerk/: __init__.py  calibration.py  chem.py  event.py  generator.py  h5_streamer.py  spectra.py  tof_streamer.py
backend/lib/: README.md  file_func.py  peak.py  pyproject.toml  util.py
backend/lib/lib/: datapool.py  file_func.py  peak.py  structs.py  util.py
backend/mascope_server/: config.py  launch.py  logger.py  main.py  runtime.py
backend/mascope_server/api/: exceptions.py
backend/mascope_server/api_sio/: server.py
backend/mascope_server/app/: __init__.py  fast.py  socket.py  socket_app.py  uvicorn.py
backend/mascope_server/db/: __init__.py  models.py  tables_config.py
backend/mascope_server/file_converter/: service.py  watcher.py
backend/mascope_server/service/: file_converter.py
backend/mascope_server/socket/: __init__.py  emitter.py  logging.py  server.py
backend/notebooks/: instrument_functions.ipynb  peak_fitting_tests.ipynb  prebuild_mz.ipynb  signal_processing_pipeline.ipynb  test_each_sweep_fitting.ipynb
backend/scripts/: dev_setup.cmd  dev_setup.sh  instrument_function_script.ipynb  peak_fitting.py  run_services.cmd  run_services.sh  sample_batch_fit_peaks.py  sample_batch_process.py
backend/service/: README.md  file_converter.py  pyproject.toml
backend/service/file_downloader_config/: KLTOF2.yaml
backend/service/service/: file_converter.py  file_downloader.py
backend/src/: .gitignore  build-requirements.sh  db_build_sample_files_table.py  db_build_sample_items_table.py  internal-requirements.txt
backend/src/hw_interfaces/: setup.py
backend/src/karsaimg/: README.md  setup.py
backend/src/karsalib/: setup.py
backend/src/karsatools/: README.md  build.cmd  setup.py
backend/src/router_service/: README.md
backend/src/scenthound/: setup.py
backend/src/services/: README.md  setup.py
backend/test/system/: stress.py  systestlib.py  test_clients.py
backend/test/unit/: test_karsalib_struct.py
backend/tests/: README.md  test_peak_fitting.py  test_signal_processing_pipeline.py  test_target_ion_compute.py
backend/tests/system/: systestlib.py  test_clients.py
backend/tests/test_utils/: dataset_generator.py
libraries/chem/: pyproject.toml
libraries/file/: pyproject.toml
libraries/mascope_api/: mascope_api.py  pyproject.toml
libraries/mascope_hardware/: pyproject.toml
libraries/mascope_lib/: pyproject.toml
libraries/mascope_runtime/: pyproject.toml
libraries/match/: pyproject.toml
libraries/reference/: README.md  pyproject.toml
libraries/runtime/: pyproject.toml
libraries/signal/: pyproject.toml
libraries/thermo/: pyproject.toml
libraries/tofwerk/: pyproject.toml
notebooks/: .gitignore  instrument_functions.ipynb  measure_peak_fitting_speed.ipynb  peak_fitting_tests.ipynb  prebuild_mz.ipynb  pyproject.toml  signal_processing_pipeline.ipynb  synthesize_signal.ipynb  test_each_sweep_fitting.ipynb  verify_instrument_functions.ipynb  voila_instrument_functions.ipynb
runtime/cli/: pyproject.toml
server/backend/: Dockerfile  alembic.ini  pyproject.toml
tooling/cli/: README.md  pyproject.toml
(+3763 files in other folders)
