[project]
name = "mascope"
version = "0.0.0"
description = "Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "LicenseRef-Proprietary"
dependencies = [
    "mascope_cli",
    "mascope_backend",
    # libraries
    "mascope_runtime",
    "mascope_chem",
    "mascope_match",
    "mascope_sdk",
    "mascope_signal",
    "mascope_tofwerk",
    "mascope_thermo",
    "mascope_tools",
    "mascope_molmass",
]

[project.scripts]
mascope = "mascope_cli.main:app"
mascope-backend = "mascope_backend.main:exec"

[dependency-groups]
dev = [
    "deptry>=0.23,<0.24",
    "austin-dist~=3.6",
    # jupyter
    "jupyterlab>=4.4,<4.5",
    "dash>=2.17.1,<3",
    "ipywidgets~=8.1",
    "matplotlib>=3.10.1",
    "plotly>=5.23.0,<6",
    "scikit-learn>=1.5.1,<2",
    "voila>=0.5.8,<0.6",
    # testing
    "pytest~=8.2",
    "pytest-asyncio>=0.26,<0.27",
    "ruff>=0.15.8,<0.16",
]

[tool.uv.workspace]
members = [
    "tooling/cli",
    "server/backend",
    "libraries/*",
]

[tool.uv.sources]
mascope_backend = { workspace = true }
mascope_cli = { workspace = true }
# libraries
mascope_chem = { workspace = true }
mascope_file = { workspace = true }
mascope_match = { workspace = true }
mascope_sdk = { workspace =  true }
mascope_signal = { workspace = true }
mascope_tofwerk = { workspace = true }
mascope_thermo = { workspace = true }
mascope_tools = { workspace = true }
mascope_runtime = { workspace = true }
mascope_molmass = { workspace = true}

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "I",   # isort
    "F",   # pyflakes — unused imports, undefined names
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["mascope_*"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
