[project]
name = "mascope"
version = "0.0.0"
description = "Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "Apache-2.0"
dependencies = [
    # The monorepo needs the CLI's developer commands and demo tooling; a
    # standalone (wheel) install of mascope_cli gets the operator surface only.
    "mascope_cli[dev,demo]",
    "mascope_backend",
    # libraries
    "mascope_runtime",
    "mascope_chem",
    "mascope_match",
    "mascope_sdk",
    "mascope_signal",
    "mascope_tofwerk",
    "mascope_thermo",
    "mascope_tools",
]

[project.scripts]
# `mascope` is provided by the mascope_cli package itself, so a standalone
# wheel install gets the command too.
mascope-backend = "mascope_backend.main:exec"

[dependency-groups]
# Small standalone group so CI can install the linter without the heavy dev deps.
lint = ["ruff>=0.16.0,<0.17"]
dev = [
    { include-group = "lint" },
    "deptry>=0.25.1,<0.26",
    "austin-dist~=3.6",
    # jupyter
    "jupyterlab>=4.6,<5",
    "ipywidgets~=8.1",
    "matplotlib>=3.11.1",
    "plotly>=5.23.0,<6",
    "scikit-learn>=1.9.0,<2",
    "voila>=0.5.12,<0.6",
    # testing
    "pytest-alembic>=0.12,<0.13",
    "pytest~=9.1",
    "pytest-asyncio>=1.4.0,<2",
]

[tool.uv.workspace]
members = [
    "tooling/cli",
    "server/backend",
    "libraries/*",
]

[tool.uv.sources]
mascope_backend = { workspace = true }
mascope_cli = { workspace = true }
# libraries
mascope_chem = { workspace = true }
mascope_file = { workspace = true }
mascope_match = { workspace = true }
mascope_sdk = { workspace =  true }
mascope_signal = { workspace = true }
mascope_tofwerk = { workspace = true }
mascope_thermo = { workspace = true }
mascope_tools = { workspace = true }
mascope_runtime = { workspace = true }

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "tooling/notebooks",        # exploratory notebooks, not production code
    "server/backend/tests/old", # legacy suite kept for reference only
]

[tool.ruff.lint]
select = [
    "I",   # isort
    "F",   # pyflakes — unused imports, undefined names
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line length is owned by `ruff format`
    "E731", # assigning lambdas is fine
]

[tool.ruff.lint.per-file-ignores]
# Star re-exports are the intended pattern in package __init__ modules.
"**/__init__.py" = ["F403", "F405"]
# Annotations name .NET types (RawFileReaderAdapter, System List) that only
# exist after the proprietary RawFileReader DLLs are loaded at runtime.
"libraries/thermo/src/mascope_thermo/thermo.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["mascope_*"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
