[tool.poetry]
name = "mascope_server"
version = "1.2"
description = "Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
packages = [{ include = "mascope_server" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope-api = 'mascope_server.main:run'
mascope-file-converter = 'mascope_server.service.file_converter:run'
mascope-log-rotate = 'mascope_server.service.log_rotate:run'
mascope-db-restore = 'mascope_server.db.ops.restore:run_db_restore'
mascope-db-maintenance = 'mascope_server.db.ops.maintenance:run_db_maintenance'

[tool.poetry.dependencies]
python = "~3.10"
mascope_lib = { path = '../libraries/mascope_lib', develop = true }
mascope_hardware = { path = '../libraries/mascope_hardware', develop = true }

aiosqlite = "^0.20.0"
colorcet = "^3.0.0"
fastapi = "^0.95.1"
nanoid = "^2.0.0"
nest-asyncio = "^1.5.5"
numpy = "^1.26.1"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
python-socketio = "^5.10.0"
requests = "^2.28.1"
scipy = "^1.11.3"
sqlalchemy = "^2.0.12"
uvicorn = "^0.19.0"
watchdog = "^3.0.0"
zarr = "^2.16.1"

[tool.poetry.group.dev.dependencies]
austin-dist = "^3.6.0"
deptry = "^0.16.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
tqdm = "^4.66.4"
