[tool.poetry]
name = "mascope_server"
version = "1.2"
description = "Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
packages = [{ include = "mascope_server" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope-api = 'mascope_server.main:run'
mascope-file-converter = 'mascope_server.file_converter.service:run'
mascope-launch = 'mascope_server.launch:launch'
mascope-db-backup = 'mascope_server.db.ops.backup:run_db_backup'
mascope-db-create = 'mascope_server.db.ops.create_database:run'
mascope-db-restore = 'mascope_server.db.ops.restore:run_db_restore'
mascope-db-maintenance = 'mascope_server.db.ops.maintenance:run_db_maintenance'

[tool.poetry.dependencies]
python = "~3.12"
mascope_runtime = { path = '../runtime/lib/', develop = true }
mascope_lib = { path = '../libraries/mascope_lib/', develop = true }
mascope_hardware = { path = '../libraries/mascope_hardware/', develop = true }

aiosqlite = "^0.20"
colorcet = "^3.1"
fastapi = "^0.111"
nanoid = "^2.0"
nest-asyncio = "^1.6"
numpy = "^1.26"
pandas = "^2.2"
pyyaml = "^6.0"
python-socketio = "^5.11"
requests = "^2.32"
scipy = "^1.13"
sqlalchemy = "^2.0"
uvicorn = "^0.30"
websocket-client = "^1.8"
zarr = "==2.18.2"
pyarrow = "^17.0.0"
python-multipart = "^0.0.10"

[tool.poetry.group.dev.dependencies]
austin-dist = "^3.6"
deptry = "^0.16"
pytest = "^8.2"
pytest-asyncio = "^0.23"
tqdm = "^4.66"
xarray = "==2024.6.0"
scikit-learn = "^1.5.1"
