[tool.poetry]
name = "mascope_notebooks"
version = "1.2"
description = "Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = '~4.2'

mascope = { path = '../backend', develop = true }
mascope_api = { path = '../libraries/api_wrapper', develop = true }

ipywidgets = "^8.1.2"
lmfit = "^1.2.2"
matplotlib = "^3.8.3"
numpy = "^1.26.1"
pandas = "^2.1.1"
plotly = "^5.19.0"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16.1"
