[tool.poetry]
name = "mascope_notebooks"
version = "1.2"
description = "Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"
jupyterlab = '~4.2'

mascope_server = { path = '../backend/', develop = true }
mascope_lib = { path = '../libraries/mascope_lib/', develop = true }
mascope_hardware = { path = '../libraries/mascope_hardware/', develop = true }
mascope_api = { path = '../libraries/mascope_api/', develop = true }

ipywidgets = "^8.1"
lmfit = "^1.3"
matplotlib = "^3.9"
numpy = "^1.26"
pandas = "^2.2"
plotly = "^5.22"
scipy = "^1.13"
tqdm = "^4.66.4"
voila = "^0.5.8"
isospecpy = "^2.2.2"
molmass = "^2024.10.25"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16"
