[project]
name = "mascope_file_agent"
version = "0.0.0"
description = "Mascope's instrument machine agent. Sends sample files to the Mascope server."
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license = "LicenseRef-Proprietary"

[tool.poetry.dependencies]
mascope_runtime = { path = "../../libraries/runtime", develop = true }
mascope_sdk = { path = "../../libraries/sdk", develop = true }
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
