[project]
name = "mascope_file_agent"
version = "0.0.0"
description = "Mascope's instrument machine agent. Sends sample files to the Mascope server."
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license = "LicenseRef-Proprietary"
dependencies = [
    "mascope_runtime",
    "mascope_sdk",
    "watchdog~=4.0",
]

[project.scripts]
mascope-file-agent = "mascope_file_agent.main:run"

[dependency-groups]
dev = [
  "pyinstaller~=6.12"
]

[tool.uv.sources]
mascope_runtime = { path = "../../libraries/runtime", editable = true }
mascope_sdk = { path = "../../libraries/sdk", editable = true }

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
