[tool.poetry]
name = "file-uploader"
version = "1.0"
description = "User-friendly chemical detection platform"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
include = ["file_uploader"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope-file-uploader = 'file_uploader:run'

[tool.poetry.dependencies]
python = "~3.12"
mascope_sdk = { path = '../../libraries/mascope_sdk/', develop = true }
mascope_runtime = { path = '../../runtime/lib/', develop = true }

watchdog = "^4.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16"
pyinstaller = "^6.8"
