[tool.poetry]
name = "mascope-ht3000a-agent"
version = "1.0"
description = "User-friendly chemical detection platform"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
include = ["ht3000a"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"

setuptools = "~70.1"
