[project]
name = "mascope_tof_agent"
version = "0.0.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "LicenseRef-Proprietary"
dependencies = [
    "mascope_runtime",
    "mascope_sdk",
    "mascope_tofwerk",
    "python-socketio~=5.11",
    "aiohttp>=3.11.11,<4",
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
