[project]
name = "mascope_tof_agent"
version = "0.0.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "LicenseRef-Proprietary"

[tool.poetry.dependencies]
mascope_file = { path = "../../libraries/file", develop = true }
mascope_runtime = { path = "../../libraries/runtime", develop = true }
mascope_sdk = { path = "../../libraries/sdk", develop = true }
mascope_tofwerk = { path = "../../libraries/tofwerk", develop = true}
python-socketio = "^5.12.1"
aiohttp = "^3.11.14"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
