[project]
name = "mascope_tof_agent"
version = "0.0.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "LicenseRef-Proprietary"
dependencies = [
    "mascope_runtime",
    "mascope_sdk",
    "mascope_tofwerk",
    "python-socketio~=5.11",
    "aiohttp>=3.14.0,<4",
]

[project.scripts]
mascope-tof-agent = "mascope_tof_agent.main:run"

[dependency-groups]
dev = [
  "pyinstaller~=6.12"
]

[tool.uv.sources]
mascope_runtime = { path = "../../libraries/runtime", editable = true }
mascope_sdk = { path = "../../libraries/sdk", editable = true }
mascope_tofwerk = { path = "../../libraries/tofwerk", editable = true }

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
