[tool.poetry]
name = "tof-agent"
version = "1.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope-tof-agent = 'tof_agent:run'

[tool.poetry.dependencies]
python = "~3.10"
mascope_hardware = { path = '../../libraries/mascope_hardware', develop = true }

setuptools = "62.6.0"
python-socketio = "^5.7.2"
numpy = "^1.23.5"
pyaml = "^23.9.7"
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "5.6.2"
