[tool.poetry]
name = "tof-agent"
version = "1.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope-tof-agent = 'tof_agent:run'

[tool.poetry.dependencies]
python = "~3.10"
mascope_hardware = { path = '../../libraries/mascope_hardware', develop = true }

python-socketio = "^5.7.2"
pyyaml = "^6.0.1"
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16.1"
pyinstaller = "^6.8.0"
