[tool.poetry]
name = "tof-agent"
version = "1.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope-tof-agent = 'tof_agent:run'

[tool.poetry.dependencies]
python = "~3.12"
mascope_hardware = { path = '../../libraries/mascope_hardware/', develop = true }
mascope_runtime = { path = '../../runtime/lib/', develop = true }

python-socketio = "^5.11"
pyyaml = "^6.0"
aiohttp = "^3.9"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16"
pyinstaller = "^6.8"
