[tool.poetry]
name = "tof-service"
version = "1.0"
description = "Agent to connect Tofwerk TOF with Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
packages = [
    { include = "hardware", from = "../../backend" },
    { include = "lib", from = "../../backend/backend" },
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tof-service = 'tof_service:run'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
setuptools = "62.6.0"
python-socketio = "^5.7.2"
numpy = "^1.23.5"
pyaml = "^21.10.1"
aiohttp = "^3.8.3"
