[tool.poetry]
name = "hardware"
version = "0.1.0"
description = ""
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.1"
pythonnet = "^3.0.3"
h5sparse = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
