[tool.poetry]
name = "hardware"
version = "0.1.0"
description = ""
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.16.0"
pythonnet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
