[tool.poetry]
name = "service"
version = "0.2.0"
description = ""
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-socketio = "^5.10.0"
aiohttp = "^3.8.6"
python-dotenv = "^1.0.0"
scipy = "^1.11.3"

# Local dependencies
hardware = { path = "../hardware", develop = true }
lib = { path = "../lib", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
