[project]
name = "mascope_file"
version = "0.0.0"
description = "Mascope's internal file library"
authors = [{ name = "Oskari Kausiala", email = "oskari.kausiala@karsa.fi" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "mascope_runtime",
    "datetime-glob~=1.0",
    "numpy~=1.26",
    "xarray==2024.11.0",
    "zarr==2.18.2", # TODO: Resolve dependency issue https://github.com/Karsa-Oy/Mascope/issues/479
    "numcodecs==0.15.1", # TODO: See issue above 
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
