[tool.poetry]
name = "mascope_api"
version = "0.1.0"
description = "Mascope's public API library, wrapping the app's REST API."
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]
readme = "README.md"
packages = [{ include = "mascope_api.py" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"

ipywidgets = "^8.1"
pandas = "^2.2"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16"
