[tool.poetry]
name = "mascope_hardware"
version = "0.2.0"
description = "Mascope's hardware library"
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
mascope_lib = { path = '../mascope_lib', develop = true }

h5py = "^3.11.0"
numpy = "^1.16.0"
pythonnet = "^3.0.3"
pandas = "^2.2.2"
scipy = "^1.13.1"
xarray = "^2023.10.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16.1"
