[tool.poetry]
name = "mascope_hardware"
version = "0.2.0"
description = "Mascope's hardware library"
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"
mascope_runtime = { path = '../../runtime/lib/', develop = true }

h5py = "^3.11"
numpy = "^1.26"
pythonnet = "^3.0"
pandas = "^2.2"
scipy = "^1.13"
xarray = "==2024.6.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16"
