[tool.poetry]
name = "mascope_lib"
version = "0.1.0"
description = "Mascope's internal library"
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.10"

colorcet = "^3.1.0"
dask = "^2023.10.0"
datashader = "^0.15.2"
datetime-glob = "^1.0.8"
h5py = "^3.10.0"
lmfit = "^1.2.2"
numpy = "^1.26.1"
pandas = "^2.1.1"
pillow = "^10.3.0"
sparse = "^0.14.0"
watchdog = "^3.0.0"
xarray = "^2023.10.1"
zarr = "^2.16.1"
scipy = "^1.13.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
