[tool.poetry]
name = "mascope_lib"
version = "0.1.0"
description = "Mascope's internal library"
authors = ["Oskari Kausiala <oskari.kausiala@karsa.fi>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"
mascope_runtime = { path = '../../runtime/lib/', develop = true }
mascope_hardware = { path = '../mascope_hardware/', develop = true }

colorcet = "^3.1"
dask = "==2024.7.0"
datashader = "^0.16"
datetime-glob = "^1.0"
h5py = "^3.11"
lmfit = "^1.3"
numpy = "^1.26"
pandas = "^2.2"
pillow = "^10.3"
sparse = "^0.15"
watchdog = "^4.0"
xarray = "==2024.6.0"
zarr = "==2.18.2"
scipy = "^1.13"
pywavelets = "^1.7.0"
isospecpy = "^2.2.2"

[tool.poetry.group.dev.dependencies]
deptry = "^0.16"
plotly = "^5.23.0"
dash = "^2.17.1"
