[tool.poetry]
name = "mascope_runtime"
version = "2024.6.23"
description = "Karsa Mascope's shared runtime util library for config, state and logging"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
packages = [{ include = "mascope_runtime" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12"

rich = "^13.7.1"
pydantic = "^2.8.2"
