[project]
name = "mascope_reference"
version = "0.0.0"
description = "Mascope's reference chemistry & spectral database library (ingestion + query)"
authors = [{ name = "Karsa Oy", email = "support@karsa.fi" }]
requires-python = ">=3.12,<3.13"
license.text = "Apache-2.0"
dependencies = [
    "mascope_tools",
    "pydantic>=2.8.2,<3",
    "sqlalchemy~=2.0",
]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-asyncio>=1.3.0,<2",
]

[tool.uv.sources]
mascope_tools = { workspace = true }

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
