[project]
name = "mascope_thermo"
version = "0.0.0"
description = "Mascope's Thermofisher Orbitrap API"
authors = [{ name = "Oskari Kausiala", email = "oskari.kausiala@karsa.fi" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "mascope_runtime",
    "mascope_file",
    "numpy~=1.26",
    "opentfraw~=1.1",
    "pythonnet~=3.0",
    "xarray>=2025.06.1",
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
