[project]
name = "mascope_thermo"
version = "0.0.0"
description = "Mascope's Thermofisher Orbitrap API"
authors = [{ name = "Oskari Kausiala", email = "oskari.kausiala@karsa.fi" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "mascope_runtime",
    "mascope_file",
    "numpy~=1.26",
    # Karsa fork of opentfraw (adds profile / centroid_labels / scan_parameters /
    # created accessors + Exploris scan-event decoding). Ships the `opentfraw`
    # module, so imports are unchanged. 1.3 adds `created` (acquisition timestamp)
    # used at ingestion. Switch back to upstream `opentfraw` once these land.
    "mascope-opentfraw~=1.3",
    "pythonnet~=3.0",
    "xarray>=2025.06.1",
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
