[tool.poetry]
name = "mascope_cli"
version = "2024.6.23"
description = "Karsa Mascope"
authors = ["Karsa Oy <support@karsa.fi>"]
license = "Proprietary"
packages = [{ include = "mascope_cli" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mascope = 'mascope_cli.main:app'

[tool.poetry.dependencies]
python = "~3.12"
mascope_runtime = { path = '../lib', develop = true }

typer = "^0.12.3"
rich = "^13.7.1"
